--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+*{
+  margin: 0px;
+  padding: 0px;
+}
+body{
+box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar{
+  background-color: cadetblue;
+  border: 1px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-evenly;
+  text-decoration: none;
   }
-  to {
-    transform: rotate(360deg);
+  .nav li{
+  
+    list-style-type: none;
   }
-}
+  .nav li:hover{
+   transform: scaleY(1);
+  }
+  .head{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
+  .addbtn{
+    width: 200px;
+    height: 50px;
+    margin-top: 20px;
+    background-color: darkolivegreen;
+  }
+  table,th,td{
+    border: 1px solid;
+    text-align: center;
+    
+    height: 50px;
+    width: 1000px;
+  }
+  .main{
+   margin: 30px 0px 0px 0px;
+   justify-content: center;
+  }
+  
+  .input-container{
+    display: flex;
+    flex-direction: column;
+    
+  }
+  .input-container input{
+    width: 200px;
+    
+  }
+  .container{
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    
+  }
+  .btn{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 20px;
+  }
